force-app/main/default/objects/ucinn_ascendv2__Email__c/ucinn_ascendv2__Email__c.object-meta.xml
<CustomObject>
    <description>The emails of the constituent.</description>
    <label>Email</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>