force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni Association Mailings</fullName>
            </value>
            <value>
                <fullName>Endowment reports</fullName>
            </value>
            <value>
                <fullName>General, all mail</fullName>
            </value>
            <value>
                <fullName>Governor Mailings</fullName>
            </value>
            <value>
                <fullName>Professional Advisor</fullName>
            </value>
            <value>
                <fullName>Pledge Reminders</fullName>
            </value>
            <value>
                <fullName>Prospectus Magazine</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Reiman Gardens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>