force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/Email_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>