force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/iModules_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>iModules_ID_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.One_ID__c &amp;( ucinn_ascendv2__Email_Address__c )</formula>
    <label>iModules ID Formula</label>
    <type>Text</type>
</CustomField>