force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/iModules_System_ID__c.field-meta.xml
<CustomField>
    <fullName>iModules_System_ID__c</fullName>
    <description>This is a system generated external ID to be used for iModules Updates</description>
    <externalId>true</externalId>
    <label>iModules System ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>