force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/ucinn_ascendv2__Email_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Email_Name_Auto_Number__c</fullName>
    <displayFormat>E-{0000000}</displayFormat>
    <label>Email Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>