force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <description>Used to determine the Department or Interface that created/updated the record</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>