force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/ucinn_ascendv2__Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>