force-app/main/default/objects/ucinn_ascendv2__Email__c/fields/ucinn_ascendv2__Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Email_Type</valueSetName>
    </valueSet>
</CustomField>