force-app/main/default/objects/ucinn_ascendv2__Email__c/recordTypes/ucinn_ascendv2__Organization_Email.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Organization_Email</fullName>
    <active>true</active>
    <description>An email which belongs to a corporation/organization.</description>
    <label>Organization Email</label>
</RecordType>