force-app/main/default/objects/ucinn_ascendv2__Email__c/listViews/All_Email.listView-meta.xml
<ListView>
    <fullName>All_Email</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Type__c</columns>
    <columns>ucinn_ascendv2__Email_Address__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>ucinn_ascendv2__Is_Preferred__c</columns>
    <columns>ucinn_ascendv2__Source__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Email</label>
</ListView>